--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -22,5 +22,12 @@ jobs:
                 "issue_type": "pull-request",
                 "allow_edits": true,
                 "repository": "project-monai/monai-code-formatter"
-              }
+              },
+              {
+                "command": "integration",
+                "permission": "none",
+                "issue_type": "pull-request",
+                "allow_edits": true,
+                "repository": "project-monai/monai",
+              },
             ]
