--- a/.github/workflows/integration-command.yml
+++ b/.github/workflows/integration-command.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   integration-py3:
     container:
-      image: nvcr.io/nvidia/pytorch:20.03-py3  # CUDA 10.2
+      image: nvcr.io/nvidia/pytorch:20.03-py3
       options: --gpus all
     runs-on: [self-hosted, linux, x64, common]
     steps:
