Remove black chatop
Signed-off-by: Behrooz <3968947+behxyz@users.noreply.github.com>

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -17,17 +17,9 @@ jobs:
           config: >
             [
               {
-                "command": "black",
-                "permission": "none",
-                "issue_type": "pull-request",
-                "allow_edits": true,
-                "repository": "project-monai/monai-code-formatter"
-              },
-              {
                 "command": "integration",
                 "permission": "none",
                 "issue_type": "pull-request",
-                "allow_edits": true,
-                "repository": "project-monai/monai",
-              },
+                "allow_edits": true
+              }
             ]
